--- a/src/css/base/form.css
+++ b/src/css/base/form.css
@@ -21,9 +21,10 @@ textarea,
 select {
   height: 38px;
   background-color: #E0E0E0;
+  color: #000;
   border: 1px solid #D1D1D1;
   border-radius: 4px;
-  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+  padding: 0px 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset;
   box-sizing: border-box;
   transition: border .3s, background-color .3s, box-shadow .3s;
@@ -253,4 +254,20 @@ input[type=range]::-ms-thumb {
   background-color: #E1E1E1;
   cursor: pointer;
   border: 2px solid transparent;
+}
+
+/* Change placeholder color for text inputs */
+::-webkit-input-placeholder { /* Chrome */
+  color: #6a6a6a;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #6a6a6a;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #6a6a6a;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: #6a6a6a;
+  opacity: 1;
 }
