--- a/src/less/meshki/base/meshki.less
+++ b/src/less/meshki/base/meshki.less
@@ -1,67 +1,59 @@
 /*
-* Meshki v1.5.1
-* Copyright 2016-2017, Mohammad reza Hajianpour <hajianpour.mr@gmail.com>
-* https://borderliner.github.io/Meshki/
-* Free to use under the MIT license.
-* https://opensource.org/licenses/MIT
-*/
+ * Meshki v2.0.0 (https://borderliner.github.io/Meshki/)
+ * Copyright 2017 Mohammadreza Hajianpour <hajianpour.mr@gmail.com>
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
-/* Info
---------------------------------------------------
-  Meshki has some default properties, like default text colors and the specific black
-color of the background. All these properties are set here to help the developer
-create a more consistent add-on components that can match the default properties of
-Meshki. Since CSS does not support variables like Sass and LESS, I am
-providing you the values here directly. Here you go:
+// Variables
+//////////////////////////////////////////////////
 
-- $default-font-family:              'Open Sans';
-- $default-rtl-font-family:          'B yekan';
-- $default-font-weight:              400;
-- $container-max-width:              960px;
-- $container-width-mobile:           100%;
-- $container-width-phablet:          85%;
-- $container-width-tablet:           80%;
+@default-font-family:              "Open Sans", sans-serif;
+@default-font-weight:              400;
+@default-font-size::after          1.6rem;
+@container-max-width:              960px;
+@container-width-mobile:           100%;
+@container-width-phablet:          85%;
+@container-width-tablet:           80%;
 
-- $media-mobile:                     400px;
-- $media-phablet:                    544px;
-- $media-tablet:                     768px;
-- $media-desktop:                    992px;
-- $media-desktop-hd:                 1200px;
+@media-mobile:                     400px;
+@media-phablet:                    544px;
+@media-tablet:                     768px;
+@media-desktop:                    992px;
+@media-desktop-hd:                 1200px;
 
-- $background-color:                 #222;
-- $text-color:                       #E1E1E1;
-- $default-white-color:              $text-color;
-- $button-simple-color:              $text-color;
-- $button-default-color:             #55ACEE;
-- $button-success-color:             #2ECC71;
-- $button-danger-color:              #E74C3C;
-- $button-warning-color:             #E67E22;
-- $link-default-color:               $button-default-color;
-- $link-hover-color:                 #74C1FB;
-- $sidenav-lines-color:              #818181;
+@background-color:                 #222;
+@text-color:                       #E1E1E1;
+@text-selection-color:             #15ACEE;
+@default-white-color:              @text-color;
+@button-simple-color:              @text-color;
+@button-default-color:             #55ACEE;
+@button-success-color:             #2ECC71;
+@button-danger-color:              #E74C3C;
+@button-warning-color:             #E67E22;
+@link-default-color:               @button-default-color;
+@link-hover-color:                 #74C1FB;
+@sidenav-lines-color:              #818181;
 
-- $button-small-size:                1.2rem;
-- $button-medium-size:               1.6rem;
-- $button-large-size:                2.2rem;
+@button-small-size:                1.2rem;
+@button-medium-size:               1.6rem;
+@button-large-size:                2.2rem;
 
-- $sidenav-width:                    250px;
-- $sidenav-animation-duration:       0.5s;
+@sidenav-width:                    250px;
+@sidenav-animation-duration:       0.5s;
 
-- $other-animation-duration:         0.3s;
+@other-animation-duration:         0.3s;
 
-- $one-column-width:                 4.66666666667%;
-- $two-columns-width:                13.3333333333%;
-- $three-columns-width:              22%;
-- $four-columns-width:               30.6666666667%;
-- $five-columns-width:               39.3333333333%;
-- $six-columns-width:                48%;
-- $seven-columns-width:              56.6666666667%;
-- $eight-columns-width:              65.3333333333%;
-- $nine-columns-width:               74%;
-- $ten-columns-width:                82.6666666667%;
-- $eleven-columns-width:             91.3333333333%;
-- $twelve-columns-width:             100%;
-*/
 
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -77,8 +69,8 @@ providing you the values here directly. Here you go:
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* NOTE
-html is set to 62.5% so that all the REM measurements throughout Skeleton
-are based on 10px sizing. So basically 1.5rem = 15px :) */
+html is set to 62.5% so that all the REM measurements throughout Meshki
+are based on 10px sizing. So basically 1.5rem = 15px */
 html {
   font-size: 62.5%;
   height: 100%;
@@ -88,13 +80,13 @@ html {
 
 /* General attributes of the body tag */
 body {
-  font-size: 1.6rem;
+  font-size: @default-font-size;
   height: 100%;
   line-height: 1.6;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  background-color: #222;
-  color: #E1E1E1;
+  font-weight: @default-font-weight;
+  font-family: @default-font-family;
+  background-color: @background-color;
+  color: @text-color;
 }
 
 
@@ -102,11 +94,11 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Nice blue for links */
 a {
-  color: #55acee;
+  color: @link-default-color;
 }
 
 a:hover {
-  color: #74C1FB;
+  color: @link-hover-color;
 }
 
 /* Spacing
@@ -142,17 +134,17 @@ form {
 /* Default <hr> tag */
 hr {
   border-width: 0;
-  border-top: 1px solid #E1E1E1;
+  border-top: 1px solid @text-color;
   margin-top: 3rem;
   margin-bottom: 3.5rem;
 }
 
 /* Text selection color */
 ::selection {
-  background: #15acee; /* WebKit/Blink Browsers */
+  background: @text-selection-color; /* WebKit/Blink Browsers */
 }
 ::-moz-selection {
-  background: #15acee; /* Gecko Browsers */
+  background: @text-selection-color; /* Gecko Browsers */
 }
 
 /* Clearing
@@ -177,16 +169,16 @@ compatibility reasons.
 */
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: @media-mobile) {}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 544px) {}
+@media (min-width: @media-phablet) {}
 
 /* Larger than tablet */
-@media (min-width: 768px) {}
+@media (min-width: @media-tablet) {}
 
 /* Larger than desktop */
-@media (min-width: 992px) {}
+@media (min-width: @media-desktop) {}
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+@media (min-width: @media-desktop-hd) {}
