Port layout.scss from less to scss

--- a/src/sass/boot.scss
+++ b/src/sass/boot.scss
@@ -1,8 +1,8 @@
-@import 'meshki/base/meshki.less';
+@import 'meshki/base/meshki';
 @import 'meshki/base/normalize';
 @import 'meshki/util/utility';
 
-@import 'meshki/base/layout.less';
+@import 'meshki/base/layout';
 
 @import 'meshki/util/typography';
 
