Better file structure for variables

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,4 @@
-@import 'utils/variables';
-@import 'utils/colors';
+@import 'utils/variables/module';
 
 @import 'utils/module';
 @import 'vendor/module';
