--- a/src/scss/utils/variables/_colors.scss
+++ b/src/scss/utils/variables/_colors.scss
@@ -46,3 +46,5 @@ $link-color-default:               $button-default-color;
 $link-color-hover:                 #74c1fb;
 
 $sidenav-lines-color:              #818181;
+
+$footer-color-background:          #111;
